[tool.poetry]
name = "python-telegram-handler"
license = "MIT"
version = "2.2.1"
readme = "README.rst"
packages = [{ include = "telegram_handler" }]
authors = ["Isaac Adewumi <ienioladewumi@gmail.com>"]
keywords = ["telegram", "logging", "handler", "bot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]
repository = "https://github.com/prettyirrelevant/python-telegram-handler"
description = "A python logging handler that sends logs via Telegram Bot API"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tox = "^4.11.4"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
