[tool.poetry]
name = "python-telegram-handler"
license = "MIT"
version = "2.2.1"
readme = "README.rst"
packages = [{ include = "telegram_handler" }]
authors = ["Isaac Adewumi <ienioladewumi@gmail.com>"]
keywords = ["telegram", "logging", "handler", "bot"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Debuggers",
  "Topic :: System :: Logging",
]
repository = "https://github.com/prettyirrelevant/python-telegram-handler"
description = "A python logging handler that sends logs via Telegram Bot API"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tox = "^4.11.4"
mock = "^5.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.1.9"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
skip-string-normalization = true
target-version = ['py38']
exclude = '''
  /(
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''

[tool.isort]
profile = "black"
line_length = 119
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
combine_as_imports = true
lines_between_sections = 1
include_trailing_comma = true
skip_glob = ["**/.venv/*", "**/.tox/*"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
target-version = "py38"
preview = true
line-length = 119
select = [
  "E",
  "F",
  "W",
  "C90",
  "C4",
  "N",
  "B",
  "G",
  "DJ",
  "ISC",
  "ICN",
  "T10",
  "T20",
  "UP",
  "YTT",
  "S",
  "BLE",
  "FBT",
  "A",
  "Q",
  "ERA",
  "PGH",
  "RET",
  "SIM",
  "TID",
  "ARG",
  "PL",
  "PIE",
  "PYI",
  "COM",
  "DTZ",
  "EXE",
  "INP",
  "TCH",
  "PTH",
  "INT",
  "TRY",
  "RSE",
  "SLF",
  "RUF",
  "FURB",
  "PERF",
  "FLY",
  "TRIO",
  "TRY",
  "LOG",
  "FIX",
  "TD",
  "ERA",
]
ignore = ["E722", "S113", "PLR0913", "PLR0917", "FBT001", "FBT002"]
exclude = [".venv", ".tox"]

[tool.ruff.per-file-ignores]
"**/test_**.py" = ["S101", "SLF001", "TRY301"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
